--- a/consolidation_project/appendix_K5_Lambda_QCD.tex
+++ b/consolidation_project/appendix_K5_Lambda_QCD.tex
@@ -32,3 +32,21 @@ with $\Theta_{\rm th}$ capturing discrete KK/holonomy thresholds on $\mathbb{T}^
 \paragraph{Summary.}
 This closes the loop from the geometric scale $R$ (set by the same potential that fixes $\alpha$) to the observed $\Lambda_{\mathrm{QCD}}$,
 using only discrete input from the UBT geometry.
+
+% === AUTO-INSERT K5 BASELINE BEGIN ===
+\subsection*{Numerical output format (to be populated)}
+The following table defines the exact reporting format for $\Lambda_{\mathrm{QCD}}$. Once $R$ and $g_3(1/R)$ are fixed by Appendix~V/K, the values will be computed at two-loop with the discrete holonomy threshold factor $\Theta_{\rm th}(\tau,h)$.
+\begin{table}[h]
+\centering
+\small
+\caption{\textbf{K.5.Table 1 (format).} Output layout for $\Lambda_{\mathrm{QCD}}$ once $R$ and $g_3(1/R)$ are specified. The threshold factor $\Theta_{\rm th}$ is discrete and comes from the holonomy class.}
+\begin{tabular}{llllll}
+\hline
+scheme & $1/R$ [GeV] & $g_3(1/R)$ & $n_f$ & $\Theta_{\rm th}$ & $\Lambda_{\mathrm{QCD}}$ [MeV] \\
+\hline
+physical & --- & --- & 5 & $\in\{1,\dots\}$ & --- \\
+$\overline{\mathrm{MS}}$ & --- & --- & 5 & $\in\{1,\dots\}$ & --- \\
+\hline
+\end{tabular}
+\end{table}
+% === AUTO-INSERT K5 BASELINE END ===
