--- a/consolidation_project/appendix_K5_Lambda_QCD.tex
+++ b/consolidation_project/appendix_K5_Lambda_QCD.tex
@@ -50,3 +50,68 @@ $\overline{\mathrm{MS}}$ & --- & --- & 5 & $\in\{1,\dots\}$ & --- \\
 \end{tabular}
 \end{table}
 % === AUTO-INSERT K5 BASELINE END ===
+
+% === AUTO-INSERT K5 BASELINE V2 BEGIN ===
+\subsection*{Baseline two-loop numbers (illustrative)}
+Numerical evaluation of $\Lambda_{\mathrm{QCD}}$ across a small discrete grid in $(1/R, g_3(1/R), \Theta_{\rm th})$. Final results will use the UBT-determined $R$ and $g_3(1/R)$ from Appendix~V/K.
+
+\begin{table}[h]
+\centering
+\small
+\caption{\textbf{K.5.Table 2 (baseline).} Two-loop $\Lambda_{\mathrm{QCD}}$ for discrete $(1/R, g_3(1/R), \Theta_{\rm th})$. Values are illustrative.}
+\begin{tabular}{llllll}
+\hline
+scheme & $1/R$ [GeV] & $g_3(1/R)$ & $n_f$ & $\Theta_{\rm th}$ & $\Lambda_{\mathrm{QCD}}$ [MeV] \\
+\hline
+physical & 1.0 & 1.0 & 5 & 1.0 & 0.1\\
+$\overline{\mathrm{MS}}$ & 1.0 & 1.0 & 5 & 1.0 & 0.1\\
+physical & 1.0 & 1.0 & 5 & 2.0 & 0.2\\
+$\overline{\mathrm{MS}}$ & 1.0 & 1.0 & 5 & 2.0 & 0.2\\
+physical & 1.0 & 1.2 & 5 & 1.0 & 1.9\\
+$\overline{\mathrm{MS}}$ & 1.0 & 1.2 & 5 & 1.0 & 1.9\\
+physical & 1.0 & 1.2 & 5 & 2.0 & 3.8\\
+$\overline{\mathrm{MS}}$ & 1.0 & 1.2 & 5 & 2.0 & 3.8\\
+physical & 1.0 & 1.4 & 5 & 1.0 & 11.3\\
+$\overline{\mathrm{MS}}$ & 1.0 & 1.4 & 5 & 1.0 & 11.3\\
+physical & 1.0 & 1.4 & 5 & 2.0 & 22.6\\
+$\overline{\mathrm{MS}}$ & 1.0 & 1.4 & 5 & 2.0 & 22.6\\
+physical & 1.0 & 1.6 & 5 & 1.0 & 35.5\\
+$\overline{\mathrm{MS}}$ & 1.0 & 1.6 & 5 & 1.0 & 35.5\\
+physical & 1.0 & 1.6 & 5 & 2.0 & 71.1\\
+$\overline{\mathrm{MS}}$ & 1.0 & 1.6 & 5 & 2.0 & 71.1\\
+physical & 2.0 & 1.0 & 5 & 1.0 & 0.2\\
+$\overline{\mathrm{MS}}$ & 2.0 & 1.0 & 5 & 1.0 & 0.2\\
+physical & 2.0 & 1.0 & 5 & 2.0 & 0.4\\
+$\overline{\mathrm{MS}}$ & 2.0 & 1.0 & 5 & 2.0 & 0.4\\
+physical & 2.0 & 1.2 & 5 & 1.0 & 3.8\\
+$\overline{\mathrm{MS}}$ & 2.0 & 1.2 & 5 & 1.0 & 3.8\\
+physical & 2.0 & 1.2 & 5 & 2.0 & 7.5\\
+$\overline{\mathrm{MS}}$ & 2.0 & 1.2 & 5 & 2.0 & 7.5\\
+physical & 2.0 & 1.4 & 5 & 1.0 & 22.6\\
+$\overline{\mathrm{MS}}$ & 2.0 & 1.4 & 5 & 1.0 & 22.6\\
+physical & 2.0 & 1.4 & 5 & 2.0 & 45.3\\
+$\overline{\mathrm{MS}}$ & 2.0 & 1.4 & 5 & 2.0 & 45.3\\
+physical & 2.0 & 1.6 & 5 & 1.0 & 71.1\\
+$\overline{\mathrm{MS}}$ & 2.0 & 1.6 & 5 & 1.0 & 71.1\\
+physical & 2.0 & 1.6 & 5 & 2.0 & 142.2\\
+$\overline{\mathrm{MS}}$ & 2.0 & 1.6 & 5 & 2.0 & 142.2\\
+physical & 5.0 & 1.0 & 5 & 1.0 & 0.5\\
+$\overline{\mathrm{MS}}$ & 5.0 & 1.0 & 5 & 1.0 & 0.5\\
+physical & 5.0 & 1.0 & 5 & 2.0 & 0.9\\
+$\overline{\mathrm{MS}}$ & 5.0 & 1.0 & 5 & 2.0 & 0.9\\
+physical & 5.0 & 1.2 & 5 & 1.0 & 9.4\\
+$\overline{\mathrm{MS}}$ & 5.0 & 1.2 & 5 & 1.0 & 9.4\\
+physical & 5.0 & 1.2 & 5 & 2.0 & 18.8\\
+$\overline{\mathrm{MS}}$ & 5.0 & 1.2 & 5 & 2.0 & 18.8\\
+physical & 5.0 & 1.4 & 5 & 1.0 & 56.6\\
+$\overline{\mathrm{MS}}$ & 5.0 & 1.4 & 5 & 1.0 & 56.6\\
+physical & 5.0 & 1.4 & 5 & 2.0 & 113.2\\
+$\overline{\mathrm{MS}}$ & 5.0 & 1.4 & 5 & 2.0 & 113.2\\
+physical & 5.0 & 1.6 & 5 & 1.0 & 177.7\\
+$\overline{\mathrm{MS}}$ & 5.0 & 1.6 & 5 & 1.0 & 177.7\\
+physical & 5.0 & 1.6 & 5 & 2.0 & 355.4\\
+$\overline{\mathrm{MS}}$ & 5.0 & 1.6 & 5 & 2.0 & 355.4\\
+\hline
+\end{tabular}
+\end{table}
+% === AUTO-INSERT K5 BASELINE V2 END ===
