UBT: add QA.Table 3 (Wolfenstein, J) from discrete CKM baseline

--- a/consolidation_project/appendix_QA_quarks_CKM.tex
+++ b/consolidation_project/appendix_QA_quarks_CKM.tex
@@ -166,3 +166,18 @@ ID & cand & $\mathrm{hol}_L$ & $\mathrm{hol}_u$ & $\mathrm{hol}_d$ & $\phi_1$ & 
 \end{tabular}
 \end{table}
 % === AUTO-INSERT QA BASELINE V2 END ===
+
+% === AUTO-INSERT QA WOLFENSTEIN BEGIN ===
+\begin{table}[h]
+\centering
+\small
+\caption{\textbf{QA.Table 3 (baseline v2).} Wolfenstein parameters extracted from the best baseline CKM (discrete overlaps). Values are placeholders until UBT-specific eigenmodes/profiles are inserted.}
+\begin{tabular}{lllll}
+\hline
+$\lambda$ & $A$ & $\bar\rho$ & $\bar\eta$ & $J$ \\
+\hline
+0.9966 & 0.701 & 0.002 & 0.003 & -6.84925e-04\\
+\hline
+\end{tabular}
+\end{table}
+% === AUTO-INSERT QA WOLFENSTEIN END ===
