--- a/consolidation_project/appendix_QA_quarks_CKM.tex
+++ b/consolidation_project/appendix_QA_quarks_CKM.tex
@@ -181,3 +181,56 @@ $\lambda$ & $A$ & $\bar\rho$ & $\bar\eta$ & $J$ \\
 \end{tabular}
 \end{table}
 % === AUTO-INSERT QA WOLFENSTEIN END ===
+
+% === AUTO-INSERT QA ROBUSTNESS BEGIN ===
+\begin{table}[h]
+\centering
+\small
+\caption{\textbf{QA.Table 1c (robustness).} Median and worst-case scale-free log-RMSE over allowed discrete $(a_1,a_2)\in\{0,\tfrac12\}^2$ and spin shifts $s\in\{0,\tfrac12\}$, for the top 5 assignments from Table 1. Smaller is better.}
+\begin{tabular}{llll}
+\hline
+ID & base score & median over $(a,s)$ & worst over $(a,s)$ \\
+\hline
+1 & 2.4632 & 3.0243 & 3.1061\\
+2 & 2.4632 & 3.0167 & 3.1050\\
+3 & 2.4632 & 3.0256 & 3.1030\\
+4 & 2.4632 & 3.0154 & 3.1030\\
+5 & 2.4632 & 3.0563 & 3.1618\\
+\hline
+\end{tabular}
+\end{table}
+% === AUTO-INSERT QA ROBUSTNESS END ===
+
+% === AUTO-INSERT QA VCKM COMPARISON BEGIN ===
+\begin{table}[h]
+\centering
+\small
+\caption{\textbf{QA.Table 4.} Baseline $|V_{\mathrm{CKM}}|$ from discrete overlaps (best configuration) versus indicative PDG central values; $\Delta=|V|-|V|_{\rm PDG}$.}
+\begin{tabular}{lccc}
+\hline
+ & $d$ & $s$ & $b$ \\
+\hline
+$u$ & 0.99517 / 0.97401 (+0.02116) & 0.09803 / 0.22480 (-0.12677) & 0.00454 / 0.00368 (+0.00086)\\
+$c$ & 0.09779 / 0.22450 (-0.12671) & 0.99449 / 0.97320 (+0.02129) & 0.03773 / 0.04100 (-0.00327)\\
+$t$ & 0.00821 / 0.00870 (-0.00049) & 0.03710 / 0.04050 (-0.00340) & 0.99928 / 0.99914 (+0.00014)\\
+\hline
+\end{tabular}
+\end{table}
+% === AUTO-INSERT QA VCKM COMPARISON END ===
+
+% === AUTO-INSERT QA WOLFENSTEIN COMP BEGIN ===
+\begin{table}[h]
+\centering
+\small
+\caption{\textbf{QA.Table 3b.} Wolfenstein parameters from the best discrete-overlap CKM versus PDG (indicative); $\Delta =$ baseline $-$ PDG.}
+\begin{tabular}{llllll}
+\hline
+ & $\lambda$ & $A$ & $\bar\rho$ & $\bar\eta$ & $J$ \\
+\hline
+baseline & 0.0980 & 3.926 & -1.223 & 0.000 & -3.44421e-19\\
+PDG & 0.2248 & 0.830 & 0.144 & 0.342 & 3.00000e-05\\
+$\Delta$ & -0.1268 & +3.096 & -1.367 & -0.342 & -3.00e-05\\
+\hline
+\end{tabular}
+\end{table}
+% === AUTO-INSERT QA WOLFENSTEIN COMP END ===
