--- a/consolidation_project/appendix_QA_quarks_CKM.tex
+++ b/consolidation_project/appendix_QA_quarks_CKM.tex
@@ -22,6 +22,9 @@ where the \emph{same} function $\mathcal{F}$ and the \emph{same} discrete set $(
 appeared already in the lepton analysis (Appendix~W). Radiative and RG corrections are applied
 in the same scheme used there, ensuring scheme cross-checks with Appendix~K.
 
+\input{appendix_QA_theta_ansatz_block}
+
+
 \subsection*{B. Generations as Mode Shells}
 Generations are adjacent shells in the integer lattice corrected by spin/holonomy,
 \begin{align}
