--- a/consolidation_project/appendix_QA_quarks_CKM.tex
+++ b/consolidation_project/appendix_QA_quarks_CKM.tex
@@ -13,7 +13,11 @@ the emergent $\alpha$ mechanism (Appendix~V) to the quark sector. We keep the co
 We assume an internal two-torus $\mathbb{T}^2$ with complex structure $\tau$ fixed by the
 Hosotani/Casimir minimum that also sets the geometric scale $R$ (Appendix~V).
 Each quark flavor is assigned to a normal mode $\mathbf{n}=(n_1,n_2)\in\mathbb{Z}^2$ with spin choice
-$\sigma\in\{+,-\}$ and a holonomy class $h\in\mathcal{H}$ (finite). The tree-level spectral map reads
+$\sigma\in\{+,-\}$ and a holonomy class $h\in\mathcal{H}$ (finite). 
+
+\input{appendix_QA_theta_ansatz_block}
+
+The tree-level spectral map reads
 \begin{equation}
   m^{(0)}_{q}(\mathbf n,\sigma,h) \;=\; \frac{1}{R}\,\mathcal{F}_q\!\left(\mathbf n,\sigma,h;\tau\right),
   \label{eq:QA:m_tree}
@@ -21,9 +25,6 @@ $\sigma\in\{+,-\}$ and a holonomy class $h\in\mathcal{H}$ (finite). The tree-lev
 where the \emph{same} function $\mathcal{F}$ and the \emph{same} discrete set $(\sigma,h)$
 appeared already in the lepton analysis (Appendix~W). Radiative and RG corrections are applied
 in the same scheme used there, ensuring scheme cross-checks with Appendix~K.
-
-\input{appendix_QA_theta_ansatz_block}
-
 
 \subsection*{B. Generations as Mode Shells}
 Generations are adjacent shells in the integer lattice corrected by spin/holonomy,
