add article about SU(3) symmetry

--- a/consolidation_project/ubt_2_main.tex
+++ b/consolidation_project/ubt_2_main.tex
@@ -38,6 +38,8 @@ UBT extends GR by introducing biquaternionic degrees of freedom that represent p
 \input{appendix_D_qed_consolidated}
 \input{appendix_E_SM_QCD_embedding}
 \input{appendix_K_maxwell_curved_space}
+\input{appendix_G_internal_color_symmetry}
+
 
 % ---- SPECULATIVE / WIP ----
 \input{appendix_G_dark_matter_unified_padic}
