--- a/consolidation_project/ubt_core_main.tex
+++ b/consolidation_project/ubt_core_main.tex
@@ -37,6 +37,7 @@ UBT extends GR by introducing biquaternionic degrees of freedom that represent p
 \input{appendix_E_SM_QCD_embedding}
 \input{appendix_K_maxwell_curved_space}
 \input{appendix_Z_bibliography}
+\input{appendix_G_internal_color_symmetry}
 
 \input{appendix_alpha_statement}
 
