--- a/consolidation_project/ubt_2_main_fixed.tex
+++ b/consolidation_project/ubt_2_main_fixed.tex
@@ -19,6 +19,8 @@
 \input{appendix_D_qed_consolidated}
 \input{appendix_E_SM_QCD_embedding}
 \input{appendix_K_maxwell_curved_space}
+\input{appendix_G_internal_color_symmetry}
+
 
 % ---- SPECULATIVE / WIP ----
 \input{appendix_G_dark_matter_unified_padic}
