--- a/emergent_alpha_from_ubt.tex
+++ b/emergent_alpha_from_ubt.tex
@@ -4,10 +4,11 @@
 \usepackage{amsmath, amssymb, amsthm}
 \usepackage{geometry}
 \usepackage{graphicx}
-\usepackage{hyperref}
 \usepackage{braket}
 \usepackage{pgfplotstable}
 \usepackage{booktabs}
+\usepackage{siunitx}
+\usepackage{hyperref}
 
 \geometry{a4paper, margin=1in}
 
