--- a/references.bib
+++ b/references.bib
@@ -146,3 +146,28 @@
   year = {1978}
 }
 
+@article{Shimura1973,
+  author={Goro Shimura},
+  title={On modular forms of half integral weight},
+  journal={Annals of Mathematics},
+  year={1973}
+}
+@article{Kohnen1980,
+  author={Winfried Kohnen},
+  title={Modular forms of half-integral weight on $\Gamma_0(4)$},
+  journal={Mathematische Annalen},
+  year={1980}
+}
+@book{Iwaniec1997,
+  author={Henryk Iwaniec},
+  title={Topics in Classical Automorphic Forms},
+  year={1997},
+  publisher={AMS}
+}
+@incollection{Serre1987,
+  author={Jean-Pierre Serre},
+  title={Sur la représentation du groupe de Hecke attachée aux formes modulaires de demi–poids},
+  booktitle={Arithmetic of modular forms},
+  year={1987}
+}
+
