fix hardcoded contants

--- a/UBT_HeckeWorlds_theta_zeta_primes_appendix.tex
+++ b/UBT_HeckeWorlds_theta_zeta_primes_appendix.tex
@@ -82,7 +82,7 @@ For clarity we list a few prime sectors with computed $\Delta_{\mathrm{CT}}$ val
 Prime sector $p_i$ & Anchor $p_i$ & Correction $\Delta_{\mathrm{CT},i}$ & $\alpha_i^{-1}=p_i+\Delta_{\mathrm{CT},i}$ \\
 \midrule
 $131$ & $131$ & $0.035955204$ & $131.035955204$ \\
-$137$ & $137$ & $0.035999000$ & $137.035999000$ \\
+$137$ & $137$ & $0.035999000$ & $\AlphaInvBest$ \\
 $139$ & $139$ & $0.036013599$ & $139.036013599$ \\
 \bottomrule
 \end{tabular}
