--- a/consolidation_project/old/appendix_K_fundamental_constants_consolidated.tex
+++ b/consolidation_project/old/appendix_K_fundamental_constants_consolidated.tex
@@ -89,7 +89,7 @@ Using the internal-mode base set by $m_e$, we compare lepton masses to integer m
 r_\mu &\equiv \frac{m_\mu}{m_e} \approx 206.768282708 \approx 207 \times \big(1 -0.001121\big),\\
 r_\tau &\equiv \frac{m_\tau}{m_e} \approx 3477.365261906 \approx 3477 \times \big(1 +0.000105\big).
 \end{align}
-Numerically, $m_e = 0.510998950690\,\mathrm{MeV}$, $m_\mu = 105.6583755\,\mathrm{MeV}$, $m_\tau = 1776.93\,\mathrm{MeV}$.
+Numerically, $m_e = \ElectronMassMeV\,\mathrm{MeV}$, $m_\mu = \MuonMassMeV\,\mathrm{MeV}$, $m_\tau = 1776.93\,\mathrm{MeV}$.
 The small fractional corrections ($\Delta \lesssim 0.12\%$ for $\mu$, $0.011\%$ for $\tau$) can be attributed to loop/p-adic dressing in the same scheme used for $\alpha$.
 
 
