--- a/consolidation_project/old/appendix_N_mass_predictions_consolidated.tex
+++ b/consolidation_project/old/appendix_N_mass_predictions_consolidated.tex
@@ -65,9 +65,9 @@ All corrections are computed from UBT structures (fluctuation spectrum $\hat{\ma
 \hline
 Particle & UBT Prediction (MeV) & PDG 2024 (MeV) \\
 \hline
-Electron $m_e$ & 0.510998950 & 0.51099895000(15) \\
-Muon $m_\mu$ & 105.6583745 & 105.6583755(23) \\
-Tau $m_\tau$ & 1776.86 & 1776.86(12) \\
+Electron $m_e$ & \ElectronMassMeV & \ElectronMassMeV(15) \\
+Muon $m_\mu$ & \MuonMassMeV & \MuonMassMeV(23) \\
+Tau $m_\tau$ & \TauMassMeV & \TauMassMeV(12) \\
 \hline
 \end{tabular}
 \end{table}
