--- a/consolidation_project/ubt_osf_publication.tex
+++ b/consolidation_project/ubt_osf_publication.tex
@@ -392,8 +392,8 @@ Using muon and tau masses as inputs to determine $(A,B,p)$:
 
 \textbf{Inputs (experimental):}
 \begin{itemize}
-\item Muon: $m_\mu = 105.658376$ MeV
-\item Tau: $m_\tau = 1776.860$ MeV
+\item Muon: $m_\mu = \MuonMassMeV$ MeV
+\item Tau: $m_\tau = \TauMassMeV$ MeV
 \end{itemize}
 
 \textbf{Fitted parameters:}
@@ -411,9 +411,9 @@ With parameters fixed by heavier leptons, UBT \textbf{predicts} the electron mas
 m_e^{\mathrm{topo}}(n=1) = 0.509856 \text{ MeV}
 \end{equation}
 
-\textbf{Experimental value:} $m_e^{\mathrm{exp}} = 0.51099895$ MeV
+\textbf{Experimental value:} $m_e^{\mathrm{exp}} = \ElectronMassMeV$ MeV
 
-\textbf{Prediction accuracy:} $(0.51099895 - 0.509856)/0.51099895 = 0.22\%$
+\textbf{Prediction accuracy:} $(\ElectronMassMeV - 0.509856)/\ElectronMassMeV = 0.22\%$
 
 The small difference $\delta m_{\mathrm{EM}} = 0.001143$ MeV arises from electromagnetic self-energy, positive due to UBT's curved spacetime effects.
 
