--- a/emergent_alpha_calculations.tex
+++ b/emergent_alpha_calculations.tex
@@ -229,7 +229,7 @@ These are all calculable in standard QFT and match the observed shift remarkably
 
 The experimentally measured value at low energy (Thomson limit) is:
 \begin{equation}
-\alpha^{-1}(Q^2 \to 0) = 137.035999084(21)
+\alpha^{-1}(Q^2 \to 0) = \AlphaInvBest(21)
 \end{equation}
 
 The UBT prediction:
