--- a/emergent_alpha_executive_summary.tex
+++ b/emergent_alpha_executive_summary.tex
@@ -135,7 +135,7 @@ We evaluated $V_{\text{eff}}(p)$ for all primes $p$ near 137:
 \begin{minipage}{0.85\textwidth}
 \begin{align*}
 \alpha_{\text{UBT}}^{-1} &= 137.000000000 \quad \text{(UBT prediction)} \\
-\alpha_{\text{exp}}^{-1} &= 137.035999084 \quad \text{(CODATA 2018)} \\
+\alpha_{\text{exp}}^{-1} &= \AlphaInvBest \quad \text{(CODATA 2018)} \\
 \Delta\alpha^{-1} &= 0.036 \quad \text{(difference)}
 \end{align*}
 \end{minipage}
