--- a/unified_biquaternion_theory/alpha_final_derivation.tex
+++ b/unified_biquaternion_theory/alpha_final_derivation.tex
@@ -55,7 +55,7 @@ N = 137 \Rightarrow \alpha_0 = \frac{1}{137}
 
 The current experimental value is:
 \[
-\alpha_{\text{exp}}^{-1} = 137.035999084(21)
+\alpha_{\text{exp}}^{-1} = \AlphaInvBest(21)
 \]
 Difference:
 \[
@@ -70,7 +70,7 @@ The QED coupling constant runs with energy scale according to:
 \]
 In QED, the coupling \emph{increases} with energy (i.e., $\alpha^{-1}$ decreases as $Q^2$ increases).
 
-The experimental value $\alpha_{\text{exp}}^{-1} = 137.035999084(21)$ is measured at low energy (Thomson scattering limit, effectively $Q^2 \to 0$). At higher energies, such as the $Z$ boson mass scale, one finds $\alpha^{-1}(M_Z^2) \approx 128$.
+The experimental value $\alpha_{\text{exp}}^{-1} = \AlphaInvBest(21)$ is measured at low energy (Thomson scattering limit, effectively $Q^2 \to 0$). At higher energies, such as the $Z$ boson mass scale, one finds $\alpha^{-1}(M_Z^2) \approx 128$.
 
 \section{Interpretation of the UBT Prediction}
 
