--- a/unified_biquaternion_theory/solution_P5_dark_matter/final_electron_mass_prediction_UBT.tex
+++ b/unified_biquaternion_theory/solution_P5_dark_matter/final_electron_mass_prediction_UBT.tex
@@ -72,7 +72,7 @@ m_e^{\text{UBT}} = 0.6223 - 0.0148 - 0.1137 = \mathbf{0.4938~\text{MeV}}
 \section{Comparison with Experiment}
 The experimental value of the electron mass is:
 \[
-m_e^{\text{exp}} \approx 0.510998950~\text{MeV}
+m_e^{\text{exp}} \approx \ElectronMassMeV~\text{MeV}
 \]
 The deviation is:
 \[
