--- a/consolidation_project/appendix_K2_fundamental_constants_consolidated.tex
+++ b/consolidation_project/appendix_K2_fundamental_constants_consolidated.tex
@@ -19,9 +19,9 @@ The following table summarizes empirical reference values relevant to UBT (as us
 Constant & Value & Provenance \\
 \hline
 $\alpha^{-1}(M_Z)$ & $127.955 \pm 0.010$ & (EW fit, 5-flavor) \\
-$m_e$ & $0.51099895000(15)$ MeV & CODATA \\
-$m_\mu$ & $105.6583755(23)$ MeV & PDG \\
-$m_\tau$ & $1776.86(12)$ MeV & PDG \\
+$m_e$ & $\ElectronMassMeV(15)$ MeV & CODATA \\
+$m_\mu$ & $\MuonMassMeV(23)$ MeV & PDG \\
+$m_\tau$ & $\TauMassMeV(12)$ MeV & PDG \\
 $\Lambda_{\text{QCD}}^{(5)}$ & $\sim 0.21 \pm 0.01$ GeV & PDG \\
 $G$ & $6.67430(15)\times 10^{-11}$ m$^3$ kg$^{-1}$ s$^{-2}$ & CODATA \\
 \hline
