--- a/unified_biquaternion_theory/solution_P5_dark_matter/ThetaM_ElectronMass.tex
+++ b/unified_biquaternion_theory/solution_P5_dark_matter/ThetaM_ElectronMass.tex
@@ -22,7 +22,7 @@ We hypothesize that the three lepton generations correspond to topological state
 \begin{equation}
     S(n) = A \cdot n^7 - B \cdot n \ln(n)
 \end{equation}
-By fitting this model to the experimental masses of the muon (\(m_\mu \approx 105.66\) MeV, n=2) and the tauon (\(m_\tau \approx 1776.86\) MeV, n=3), we determine the theory's effective parameters:
+By fitting this model to the experimental masses of the muon (\(m_\mu \approx 105.66\) MeV, n=2) and the tauon (\(m_\tau \approx \TauMassMeV\) MeV, n=3), we determine the theory's effective parameters:
 \begin{align}
     A &\approx 0.8104 \\
     B &\approx -1.3948
