Cleanup/alpha audit min (#158)
* fix hardcoded contants

* Wire strict two-loop alpha forwarder; generate CSV+TeX; audit PASS

* UBT: wire CSV→TeX pipeline for α & masses; macros instead of literals; add audit+tests; drop fix-pack payloads

* progress

* progress

* cleanup

--- a/emergent_alpha_from_ubt.tex
+++ b/emergent_alpha_from_ubt.tex
@@ -31,6 +31,9 @@ Unified Biquaternion Theory}\\
 \date{\today}
 
 \begin{document}
+% auto: macros from CSV
+\input{tex/snippets_generated.tex}
+
 \maketitle
 
 % Include alpha derivation disclaimer
@@ -248,7 +251,7 @@ Virtual electron-positron pairs in the vacuum screen the bare charge, effectivel
 
 At low energies (Thomson limit, $Q^2 \to 0$), the experimental value is:
 \begin{equation}
-\alpha_{\text{exp}}^{-1}(Q^2 \to 0) = 137.035999084(21)
+\alpha_{\text{exp}}^{-1}(Q^2 \to 0) = \AlphaInvBest(21)
 \end{equation}
 
 The difference from the UBT prediction:
