--- a/report/UBT_Strict_Validation_Report.tex
+++ b/report/UBT_Strict_Validation_Report.tex
@@ -8,6 +8,7 @@
 \title{UBT Strict Validation Report}
 \author{Unified Biquaternion Theory Collaboration}
 \date{\today}
+\input{../tex/ubt_csv_macros.tex}
 \begin{document}
 \maketitle
 
