--- a/validation/alpha_running_table.tex
+++ b/validation/alpha_running_table.tex
@@ -1,13 +1,12 @@
+
 \begin{table}[h]
 \centering
-\begin{tabular}{r r}
-\hline
-$\mu$ [MeV] & $\alpha(\mu)$ \\ \hline
-1 & 0.007299270 \\
-10 & 0.007318874 \\
-100 & 0.007338636 \\
-1000 & 0.007358558 \\
-\hline
-\end{tabular}
-\caption{Geometric UBT running of $\alpha(\mu)$ (no fits).}
+\input{../tex/ubt_csv_macros.tex}% loads \UBTAlphaTable
+\pgfplotstabletypeset[
+    columns/mu_MeV/.style={column name={$ \mu $ [MeV]}, dec sep align},
+    columns/alpha_mu/.style={column name={$ \alpha(\mu) $}, fixed, fixed zerofill, precision=9},
+    every head row/.style={before row=\hline, after row=\hline},
+    every last row/.style={after row=\hline},
+]{\UBTAlphaTable}
+\caption{Geometric UBT running of $\alpha(\mu)$ loaded from CSV (no fits, no hardcoded numbers).}
 \end{table}
