--- a/validation/lepton_masses_STRICT_m0_1MeV.tex
+++ b/validation/lepton_masses_STRICT_m0_1MeV.tex
@@ -1,10 +1,17 @@
+
 \begin{table}[h]
 \centering
-\begin{tabular}{r r r r r r r}
-\hline
-$m_0$ [MeV] & $m_e$ [MeV] & $m_\mu$ [MeV] & $m_\tau$ [MeV] & $m_\mu/m_e$ & $m_\tau/m_e$ & $m_\tau/m_\mu$ \\ \hline
-1.000 & 136.215641979 & 1222.775234918 & 10976.415268490 & 8.976761 & 80.581166 & 8.976642 \\
-\hline
-\end{tabular}
-\caption{STRICT UBT lepton masses from fixed-point equations with canonical geometric scale $m_0{=}1$ MeV (no fits).}
+\input{../tex/ubt_csv_macros.tex}% loads \UBTLeptonTable
+\pgfplotstabletypeset[
+    columns/m0_MeV/.style={column name={$ m_0 $ [MeV]}, fixed, fixed zerofill, precision=3},
+    columns/me_MeV/.style={column name={$ m_e $ [MeV]}, fixed, fixed zerofill, precision=9},
+    columns/mmu_MeV/.style={column name={$ m_\mu $ [MeV]}, fixed, fixed zerofill, precision=9},
+    columns/mtau_MeV/.style={column name={$ m_\tau $ [MeV]}, fixed, fixed zerofill, precision=9},
+    columns/mmu_over_me/.style={column name={$ m_\mu/m_e $}, fixed, fixed zerofill, precision=6},
+    columns/mtau_over_me/.style={column name={$ m_\tau/m_e $}, fixed, fixed zerofill, precision=6},
+    columns/mtau_over_mmu/.style={column name={$ m_\tau/m_\mu $}, fixed, fixed zerofill, precision=6},
+    every head row/.style={before row=\hline, after row=\hline},
+    every last row/.style={after row=\hline},
+]{\UBTLeptonTable}
+\caption{STRICT UBT lepton masses from fixed-point equations, loaded from CSV (canonical $m_0{=}1$ MeV).}
 \end{table}
