--- a/report/UBT_Yukawa_From_Theta.tex
+++ b/report/UBT_Yukawa_From_Theta.tex
@@ -52,7 +52,7 @@ Immediate from the transformation law of theta constants and linearity of the wi
 \frac{y_n}{y_1} \;=\; \mathcal{H}_p(\tau)^{\sigma_n}\, R_n(\tau)^{\gamma},\qquad n\in\{3,9\},
 \end{equation}
 with fixed rational exponents \(\sigma_n,\gamma\) determined by UBT field content. In Phase I we set \(\mathcal{H}_p\equiv 1\), \(\gamma=1\)
-to isolate the \emph{pure modular} contribution and report \(\frac{y_n}{y_1}\approx R_n(\tau)\) as a \emph{theoretical candidate}—no parameters are fitted.
+to isolate the \emph{pure modular} contribution and report \(\frac{y_n}{y_1}\approx R_n(\tau)\) as a \emph{theoretical candidate}---no parameters are fitted.
 
 \section*{CSV-Driven Results}
 We compute \(R_3(\tau),R_9(\tau)\) for user-specified \(\kappa\) and \(p\) and store them in
