--- a/canonical/UBT_coding_fingerprint.tex
+++ b/canonical/UBT_coding_fingerprint.tex
@@ -3,8 +3,8 @@
 \usepackage{amsmath,amssymb,physics,geometry}
 \geometry{margin=1in}
 
-\title{Unified Biquaternion Theory:\\
-Coding Layers, Ontological Equivalence, and Observable Fingerprints}
+\title{Unified Biquaternion Theory as a Spectral Multiplex System\\
+Coding-Layer Fingerprints without Spatial Addressing}
 \author{David Jaro\v{s}}
 \date{\today}
 
@@ -12,174 +12,160 @@ Coding Layers, Ontological Equivalence, and Observable Fingerprints}
 \maketitle
 
 \section*{Axiom O1: Ontological Equivalence}
-
-\textbf{Axiom O1 (Ontological Equivalence).}
+\textbf{Axiom O1.}
 \emph{No experiment performed entirely within a physical system can
 distinguish whether that system constitutes a fundamental reality
 or an exact simulation.}
 
-This axiom does not assert that reality is a simulation, nor does it
-postulate an external simulator. It states that the ontological origin
-of a physical system has no operational meaning for internal observers.
-All physical theories must therefore be formulated purely in terms of
-intrinsic structure and observable invariants.
+Operationally, this axiom asserts that physical law is exhausted by
+internal relational structure and invariant observables.
 
-This principle plays a role analogous to Einstein's equivalence
-principle in general relativity: it constrains admissible theoretical
-structures without introducing additional dynamical assumptions.
+\section{Paradigm Shift: From Spatial Addressing to Spectral Multiplexing}
 
-\section{Layered Structure of UBT}
+UBT abandons the notion that physical information is stored at spatial
+addresses. Instead, reality is represented as a superposition of
+orthogonal spectral modes. Discrete indices label \emph{channels in a
+multiplex}, not locations in space.
 
-Unified Biquaternion Theory (UBT) is organized into three conceptually
-distinct layers:
+This removes the need to define a fixed coordinate grid on the sphere,
+resolving the tension between discretization and rotational invariance.
 
-\begin{itemize}
-\item \textbf{Layer 1 (Geometric Core):} a biquaternionic formulation of
-spacetime and fields, redefining the geometric foundations of general
-relativity and quantum field theory.
-\item \textbf{Layer 2 (Coding and Stability):} discrete selection rules
-and redundancy structures that stabilize admissible physical
-configurations.
-\item \textbf{Layer 3 (Global Coherence):} long-range algebraic and
-renormalization constraints ensuring macroscopic consistency.
-\end{itemize}
+\section{Hilbert Space of Modes}
 
-The fingerprint analysis presented in this work probes exclusively
-Layers 2 and 3. Failure of any specific fingerprint falsifies only the
-corresponding realization of these layers and does not invalidate the
-biquaternionic geometric core.
-
-\section{Geometric Anchoring of Discrete Symbols}
-
-Although the fingerprints studied here probe only Layers~2--3 (coding, stability, and global coherence), it is useful to anchor the discrete symbols to a minimal geometric/variational bridge. The goal of this section is not to \emph{derive} a unique code, but to specify a conservative path by which spherical data may acquire a naturally discretized phase description.
-
-\subsection{Spherical observables and a dimensionless action phase}
-
-Observations on the sky are naturally represented as fields on the celestial sphere $S^2$ at an effectively fixed radius $r=r_\ast$ (e.g., a last-scattering surface). We parametrize a direction by $\hat{n}=(\theta,\phi)$.
-
-In UBT, a natural dimensionless phase variable is the action measured in units of $\hbar$. We therefore introduce an \emph{action-phase map}
+Let $T(\hat n)$ denote an observable scalar field on the celestial sphere,
+$\hat n\in S^2$. Its expansion in spherical harmonics reads
 \begin{equation}
-z(\hat{n}) \equiv \frac{S(\hat{n})}{\hbar} = z_0 + \epsilon\,\delta z(\hat{n}),
-\end{equation}
-where $z_0$ is the isotropic component and $\delta z(\hat{n})$ encodes directional modulation (projection/selection effects). In the simplest theta-ansatz one may write an effective complex amplitude on the sphere as
-\begin{equation}
-\Psi(\hat{n}) = \Psi_0\,\vartheta\!\big(z(\hat{n}),\tau\big),
-\end{equation}
-where $\vartheta$ is a Jacobi theta function and $\tau$ is the complex-time modulus (UBT uses $\tau=t+i\psi$).
-
-\subsection{Quantization hypothesis and $N$-ary phase sectors}
-
-To connect geometry to discrete symbol streams, we adopt a conservative quantization hypothesis: if physical evolution is fundamentally discretized at some time step $\Delta t$ (Planck time being a limiting case), then frequencies and phases become effectively discretized in finite observation windows. Independently of the detailed mechanism, this motivates testing finite alphabets
-\begin{equation}
-\varphi(\hat{n}) \equiv \arg\!\big(\Psi(\hat{n})\big) \approx \frac{2\pi}{N}\,k(\hat{n}),\qquad k(\hat{n})\in\{0,\dots,N-1\}.
-\end{equation}
-In this paper we focus on $N\in\{16,256\}$ as practical candidates motivated by multiplex sectorization (16) and high-resolution phase coding (256). The mapping from spherical data to symbols is part of the Layer~2/3 realization and is therefore falsifiable without affecting Layer~1.
-
-\subsection{Symbol extraction from complex coefficients}
-
-Given complex observational coefficients (e.g., spherical harmonic coefficients $a_{\ell m}$), define the discretized symbol
-\begin{equation}
-s_{\ell m} = \left\lfloor \frac{N}{2\pi}\big(\arg(a_{\ell m})+\pi\big) \right\rfloor \in \mathbb{Z}_N.
-\end{equation}
-This converts a spherical (or harmonic) observable into an $N$-ary symbol stream suitable for testing parity/redundancy constraints.
-
-\subsection{A note on spherical ``packing'' of a 256-frame}
-
-If a preferred frame length $N=256$ exists in the underlying dynamics, a natural geometric question is how such a frame could manifest on $S^2$. The simplest heuristic is to associate one period with a great-circle azimuthal partition,
-\begin{equation}
-\Delta\phi = \frac{2\pi}{256},\qquad \Delta\phi \approx 1.40625^{\circ},
-\end{equation}
-which corresponds to a characteristic angular scale. In multipole space this suggests examining anomalies or phase-structure changes near a characteristic band $\ell\sim 2\pi/\Delta\phi\approx 256$ (and nearby harmonics). This is a \emph{candidate} spherical fingerprint, not a necessity: realistic sky maps use nontrivial pixelizations (e.g., HEALPix) and the projection from UBT variables to observables may smear or shift the effective scale.
-
-\subsection{2D Fourier skew fingerprint (candidate)}
-
-If an $N$-frame is realized as a stream of $N-1$ ``data'' symbols plus one synchronization symbol (a common coding pattern, e.g. $255+1$), then an unwrapped 2D indexing of the stream can exhibit a small shear. A minimal model is a linear shear transform in the 2D Fourier domain,
-\begin{equation}
-\mathcal{M}_{\text{skew}} =
-\begin{pmatrix}
-1 & 1/256\\
-0 & 1
-\end{pmatrix},
-\end{equation}
-corresponding to a skew angle
-\begin{equation}
-\theta_{\text{skew}} = \arctan\!\left(\frac{1}{256}\right) \approx 0.2238^{\circ}.
-\end{equation}
-Operationally, this fingerprint would be sought in planar projections of spherical data after a controlled unwrapping (and careful null tests). We treat it as an exploratory signature that may guide where to look, while emphasizing that its non-detection does not impact Layer~1.
-
-\section{Minimal Coding-Layer Fingerprint}
-
-We now state the simplest operational fingerprint using the discretized
-symbols $s_{\ell m}\in\mathbb{Z}_N$ defined in the previous section.
-
-\subsection{Block Formation and Parity Constraints}
-
-The symbols are grouped into blocks of length eight,
-\begin{equation}
-\mathbf{s}_k = (s_{k,1},\dots,s_{k,8}).
+T(\hat n)=\sum_{\ell=0}^{\infty}\sum_{m=-\ell}^{\ell} a_{\ell m}Y_{\ell m}(\hat n).
 \end{equation}
 
-We test each block against the parity constraints of the extended
-Hamming $(8,4,4)$ code. Let $H$ denote its parity-check matrix. The
-syndrome vector is
+Under rotations $R\in SO(3)$, the coefficients transform unitarily:
 \begin{equation}
-\mathbf{r}_k = H \mathbf{s}_k^{T}.
+a'_{\ell m}=\sum_{m'=-\ell}^{\ell}D^{(\ell)}_{m m'}(R)\,a_{\ell m'}.
 \end{equation}
 
-\subsection{Fingerprint Statistic}
+The multipole index $\ell$ labels invariant spectral \emph{slabs}, while
+$m$ labels internal degrees of freedom mixed by rotations. This structure
+is directly analogous to OFDM systems with unitary channel mixing.
 
-The primary fingerprint statistic is the empirical probability
+\section{Gauge-Fixed Spectral Multiplex}
+
+To access phase information while preserving rotational covariance, we
+introduce a data-driven gauge fixing per multipole $\ell$.
+
+Define the power tensor
 \begin{equation}
-P_0 = \frac{1}{K}\sum_{k=1}^K \delta(\mathbf{r}_k,0),
+Q^{(\ell)}_{ij}=\sum_{m,m'} a_{\ell m}^*\,a_{\ell m'}\,
+\langle \ell m|L_iL_j|\ell m'\rangle,
 \end{equation}
-where $\delta$ is the Kronecker delta. A statistically significant
-excess of $P_0$ relative to phase-randomized surrogate data constitutes
-a positive detection of the coding-layer fingerprint.
+where $L_i$ are generators of $SO(3)$ in the $\ell$ representation.
+
+Let $\hat u_\ell$ be the principal eigenvector of $Q^{(\ell)}$. A rotation
+$R_\ell$ mapping $\hat u_\ell\mapsto \hat z$ defines gauge-fixed coefficients
+\begin{equation}
+\tilde a_{\ell m}=\sum_{m'=-\ell}^{\ell}D^{(\ell)}_{m m'}(R_\ell)\,a_{\ell m'}.
+\end{equation}
+
+\paragraph{Remark.}
+This procedure introduces no external sky grid. The ``orientation'' is
+selected entirely from the field's own multipole content.
+
+\section{Symbolization and Multiplex Ordering}
+
+Phases of gauge-fixed coefficients are quantized into a finite alphabet:
+\begin{equation}
+s_{\ell m}=\left\lfloor
+\frac{256}{2\pi}\big(\arg(\tilde a_{\ell m})+\pi\big)
+\right\rfloor
+\in\mathbb Z_{256}.
+\end{equation}
+
+We define a deterministic multiplex ordering that linearizes spectral modes:
+\begin{equation}
+k=\kappa(\ell,m)=\ell^2+(m+\ell),
+\end{equation}
+and the corresponding symbol stream
+\begin{equation}
+x_k=s_{\ell m}.
+\end{equation}
 
 \paragraph{Interpretation.}
-A positive detection supports the presence of discrete stabilizing
-selection in Layer~2. Non-detection excludes this specific realization
-but leaves the UBT framework intact.
+The index $k$ labels a spectral \emph{channel}. For example, $k=137$ denotes
+the 137th multiplexed mode, not a spatial address.
 
-\section{Additional Fingerprint Classes}
+\section{Coding-Layer Fingerprints}
 
-\subsection{Phase Quantization Fingerprint}
+\subsection{Fingerprint 1: Spectral Hamming Parity}
 
-UBT predicts clustering of phases at discrete values
+Group the stream into blocks of eight symbols,
 \begin{equation}
-\arg(a_{\ell m}) \in \left\{\frac{2\pi k}{N}\right\},
+\mathbf x^{(b)}=(x_{8b},x_{8b+1},\dots,x_{8b+7}).
 \end{equation}
-testable via circular entropy and Kuiper statistics.
 
-\subsection{Multiscale Fractal Fingerprint}
-
-Hierarchical stability implies scale-invariant correlations in the
-fingerprint statistic,
+Extract a bit-level feature per symbol, for example the least significant bit
 \begin{equation}
-P_0(L) \sim L^{-\alpha},
+\mathbf b^{(b)}=(\mathrm{LSB}(x_{8b}),\dots,\mathrm{LSB}(x_{8b+7}))\in\{0,1\}^8.
 \end{equation}
-where $L$ denotes block scale. Detection of nontrivial $\alpha$ supports
-Layer~3 coherence.
+
+Let $H$ denote the parity-check matrix of the extended Hamming $(8,4,4)$ code.
+The syndrome is
+\begin{equation}
+\mathbf r^{(b)}=H(\mathbf b^{(b)})^T\pmod2.
+\end{equation}
+
+Define the fingerprint statistic as the fraction of zero syndromes:
+\begin{equation}
+P_0=\frac{1}{B}\sum_{b=0}^{B-1}\mathbf 1[\mathbf r^{(b)}=0].
+\end{equation}
+
+\paragraph{Detection rule.}
+A statistically significant excess of $P_0$ relative to phase-randomized
+surrogates (preserving $|a_{\ell m}|$ and $C_\ell$ while randomizing phases)
+constitutes a positive detection.
+
+\subsection{Fingerprint 2: Reed--Solomon Consistency across Channels}
+
+Embed $x_k$ into $GF(256)$ (via a fixed byte-to-field isomorphism) and consider
+blocks of length $n=255$:
+\begin{equation}
+\mathbf X^{(b)}=(X_{255b},\dots,X_{255b+254})\in GF(256)^{255}.
+\end{equation}
+
+A Reed--Solomon code RS$(n,k)$ can be expressed by the existence of a polynomial
+$p(t)$ of degree $<k$ such that
+\begin{equation}
+X_i = p(\alpha_i),\quad i=0,\dots,n-1,
+\end{equation}
+for distinct evaluation points $\alpha_i\in GF(256)$.
+
+Operationally, one may compute RS syndromes or attempt bounded-distance decoding.
+A non-random excess of near-codeword blocks provides an independent fingerprint.
+
+\section{Time as Phase Drift (Candidate Signature)}
+
+A mismatch between data frame length (255) and a synchronization period (256)
+induces a cumulative phase drift per frame
+\begin{equation}
+\Delta\phi=\frac{2\pi}{256}.
+\end{equation}
+
+In a spectral-multiplex picture, such drift manifests as a linear phase slope
+in mode space (a shear-like signature in Fourier representations). This is a
+candidate (model-dependent) signature of Layer~2/3 timing structure.
 
 \section{Consequences of Non-Detection}
 
-Failure to detect the minimal fingerprint rules out the specific
-$(8,4,4)$ coding realization. It does not falsify:
-\begin{itemize}
-\item the biquaternionic geometric layer,
-\item alternative coding structures,
-\item or global coherence mechanisms.
-\end{itemize}
-
-Thus non-detection constrains the model space without collapsing the
-theoretical framework.
+Non-detection of any specific fingerprint falsifies only the corresponding
+coding-layer realization (Layer~2/3) and does \emph{not} invalidate the
+biquaternionic geometric core (Layer~1). Alternative symbolizations,
+alternative algebraic codes, or different invariants may still realize the
+UBT coding layer.
 
 \section{Conclusion}
 
-UBT predicts observable statistical fingerprints arising from discrete
-stabilization layers beyond its geometric core. The minimal fingerprint
-presented here is intentionally conservative and falsifiable. Future
-work will explore alternative coding realizations and higher-order
-fingerprints.
+UBT admits a formulation as a high-dimensional OFDM-like multiplex in spectral
+space. Discrete indices label channels (modes), not spatial positions. Coding
+constraints act across spectral channels, while rotational invariance is handled
+by per-multipole gauge fixing derived from the field itself. This yields
+concrete, falsifiable fingerprints that do not require spatial addressing.
 
 \end{document}
